--- a/front/src/css/navBar.css
+++ b/front/src/css/navBar.css
@@ -1,9 +1,17 @@
 .headerHome{
   display: flex;
   justify-content: space-around;
+  align-items: center;
   flex-wrap: wrap;
-  margin-top: 20px;
-  background-color: 
+  background-color:  #6590b0;
+  color:white;
+  position: fixed;
+  top: 0;
+  width: 100%
+}
+.buttonDisconnect{
+  background-color: white;
+  height: 35px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
