--- a/front/src/css/Container.css
+++ b/front/src/css/Container.css
@@ -1,5 +1,6 @@
 .Container{
   display: flex;
+  align-items: center;
   flex-direction: column;
 }
 
@@ -7,4 +8,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+
+.cardContainer h3{
+  margin-right: 20px;
 }
