pop up création de components

--- a/front/src/css/navBarNavigate.css
+++ b/front/src/css/navBarNavigate.css
@@ -33,12 +33,12 @@
   width: 55%;
 } 
 
-.buttonContact{
+.buttonStats{
   margin-bottom: 15px;
   height: 20px;
   width: 69px;
 }
-.buttonContact img{
+.buttonStats img{
   height: auto;
   width: 55%;
 } 
