--- a/front/src/css/Participate.css
+++ b/front/src/css/Participate.css
@@ -13,3 +13,17 @@
   flex-direction: column;
   align-items: center;
 }
+
+.transactionInformation{
+  z-index: 15;
+  position: fixed;
+  height: 250px;
+  width: 280px;
+  margin-top: 156px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba(25, 110, 167, 0.9);
+  border-radius: 10px;
+}
