--- a/front/src/css/Container.css
+++ b/front/src/css/Container.css
@@ -8,8 +8,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 100px;
+  margin-top: 10px;
   margin-bottom: 60px;
+  max-width: 1140px;
 }
 
 .cardContainer h3{
