--- a/front/src/css/ProjectDetail.css
+++ b/front/src/css/ProjectDetail.css
@@ -22,3 +22,17 @@
   text-align: justify;
   margin-top: 25px;
 }
+
+.Goal{
+  background-color: lightblue;
+  width: 100%;
+  height: 25px;
+  border-radius: 15px;
+  margin-bottom: 15px;
+}
+.balance{
+  background-color: #6590b0;
+  min-height: 100%;
+  width: 30%;
+  border-radius: 15px;
+}
