--- a/front/src/css/navBar.css
+++ b/front/src/css/navBar.css
@@ -4,31 +4,18 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  background-color:  #6590b0;
-  color:white;
+  background-color: #ffffff;
+  border-bottom: 1px solid #d8d3d3;
+  color: #007477;
   position: fixed;
   top: 0;
   width: 100%
 }
-.buttonDisconnect{
-    margin-bottom: 15px;
-    height: 20px;
-    width: 69px;
-}
-.buttonDisconnect img{
-  height: auto;
-  width: 45%;
-} 
-h1{
+
+
+.headerHome img{
+  width: 15%;
   margin: auto;
+  margin-left: 20px;
 }
-
-@media screen and (min-width: 768px) and (max-width: 992px) {
- 
-}
-
-@media screen and (min-width: 993px) {
- 
-}
-
 
