--- a/front/src/css/navBarNavigate.css
+++ b/front/src/css/navBarNavigate.css
@@ -1,57 +1,51 @@
 .FooterNavigate{
   z-index: 10;
+  position: fixed;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  background-color: #6590b0;
+  background-color: #ffffff;
+  border-top: 1px solid #d8d3d3;
   color:white;
-  position: fixed;
   bottom: 0;
   height: 50px;
   width: 100%;
 }
-
+.FooterNavigate img{
+  margin-left: 15px;
+  margin-top: 3px;
+  width: auto;
+  height: auto;
+}
 
 .buttonHome{
   margin-bottom: 15px;
   height: 20px;
   width: 69px;
 }
-.buttonHome img{
-  height: auto;
-  width: 55%;
-} 
+
 
 .buttonCard{
   margin-bottom: 15px;
   height: 20px;
   width: 69px;
 }
-.buttonCard img{
-  height: auto;
-  width: 55%;
-} 
+
 
 .buttonStats{
   margin-bottom: 15px;
   height: 20px;
   width: 69px;
 }
-.buttonStats img{
-  height: auto;
-  width: 55%;
-} 
+
 
 .buttonGestion{
   margin-bottom: 15px;
   height: 20px;
   width: 69px;
 }
-.buttonGestion img{
-  height: auto;
-  width: 55%;
-} 
+
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
  
