--- a/front/src/css/progress.css
+++ b/front/src/css/progress.css
@@ -1,20 +1,31 @@
 .container{
-  z-index: 10;
+  z-index: 15;
   position: fixed;
   height: 9%;
-  margin-top: 56px;
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: #a4cceb;
-  color: white;
+  background-color: #ffffff;
+  border-bottom: 1px solid #d8d3d3;
+  color: #007477;
+  top: 0;
  
 }
 
 
+ .profil{
+  height: 40px !important;
+  width: 40px !important;
+  margin-top: 10px !important;
+  margin-left: -25px !important;
+  margin-right: 20px !important;
+}
+
 .row img{
   display: flex;
   margin: 10px;
+  margin-top: 20px;
+  height: 20px;
 }
 
 
