--- a/front/src/css/progress.css
+++ b/front/src/css/progress.css
@@ -51,3 +51,13 @@
 .containerInfo h4{
   margin-right: 35px;
 }
+
+.row{
+  color: white;
+  font-weight: bold;
+}
+
+.containerInfo h5{
+  color: white;
+  font-weight: bold;
+}
