--- a/front/src/css/ProjectDetail.css
+++ b/front/src/css/ProjectDetail.css
@@ -1,4 +1,128 @@
 .ProjectDetail{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.photoProject{
+  height: 150px;
+  width: 360px;
+}
+
+.title{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  border: 1px solid #d8d3d3;
+  border-radius: 10px;
+  width: 50%;
+  height: 50px;
+  margin: auto;
+  color: #007477;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+.dollar{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  border: 1px solid #d8d3d3;
+  border-radius: 10px;
+  width: 70%;
+  height: 225px;
+  margin: auto;
+  color: #007477;
+  margin-top: 10px;
+}
+.dollar span{
+  font-weight: bold;
+}
+
+.Goal{
+  background-color: lightblue;
+  width: 60%;
+  height: 25px;
+  border-radius: 15px;
+  margin-bottom: 15px;
+}
+.balance{
+  background-color: #6590b0;
+  min-height: 100%;
+  width: 38%;
+  border-radius: 15px;
+}
+.dollar1{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  border: 1px solid #d8d3d3;
+  border-radius: 10px;
+  width: 70%;
+  height: 50px;
+  margin: auto;
+  color: #007477;
+  margin-top: 10px;
+}
+.dollar2{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  border: 1px solid #d8d3d3;
+  border-radius: 10px;
+  width: 80%;
+  height: 50px;
+  margin: auto;
+  color: #007477;
+  margin-top: 10px;
+ 
+}
+.dollar3{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #007477;
+  border: 1px solid #d8d3d3;
+  border-radius: 10px;
+  width: 80%;
+  height: 50px;
+  margin: auto;
+  color: #ffffff;
+  margin-top: 10px;
+}
+
+.dollar4{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  border: 1px solid #d8d3d3;
+  border-radius: 10px;
+  width: 80%;
+  height: 50px;
+  margin: auto;
+  color: #007477;
+  margin-top: 10px;
+  margin-bottom: 100px;
+}
+
+
+
+
+
+
+
+/* .ProjectDetail{
   max-width: 800px;
   margin: auto;
   padding: 15px;
@@ -68,4 +192,4 @@
 
 ul{
   padding: 0;
-}
+} */
