--- a/front/src/css/Participate.css
+++ b/front/src/css/Participate.css
@@ -14,6 +14,7 @@
   align-items: center;
   padding: 10px;
   text-align: center;
+  position: relative;
 }
 .Participate h2{
   background-color: rgb(0, 116, 119, 0.2);
@@ -44,15 +45,19 @@
 }
 
 .transactionInformation{
-  z-index: 15;
-  position: fixed;
   height: 250px;
   width: 280px;
   display: flex;
   align-items: center;
   flex-direction: column;
   background-color: rgba(25, 110, 167, 0.9);
-  border-radius: 10px;
+  border-radius: 10px; 
+  z-index: 15;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
 }
 
 .transactionInformation .row{
